--- a/front/html/about.html
+++ b/front/html/about.html
@@ -40,7 +40,8 @@
         </p>
             <a href="#Post" class="satoru"><img src="../static/jpg/art/examplepost.png" ></a>
         <h2 id="Security">Security</h2>
-        <p>Soon...</p>
+        <p>Security is an important part of web forum development. First of all, we create a self-signed certificate for ourselves. The openssl utility will help with this. We created a private key for ourselves generated using the RSA cryptoalgorithm. Now the connection to the browser is via the TLS protocol, and there we will indicate which certificates to use.
+            We will set a time limit for the request and response to avoid DOS attacks.</p>
         <h2 id="Author">Author</h2>
         <p>
             <ul><li>Имя: Elnur Bauyrzan</li>
