--- a/front/html/profile.html
+++ b/front/html/profile.html
@@ -22,19 +22,20 @@
     <label for="background3">standard 2</label>
     </div>
     <div class="profile">
-        <div class="avatar-container "><img class="avatar-img " src="../static/useravatars/ava.jpg" alt="Profile Picture"></div>
+        <div class="avatar-container "><img class="avatar-img " src="../static/useravatars/{{ .ImageURL }}" alt="{{ .ImageURL }}"></div>
         {{if .Error}}
         <h3 style="color: rgb(218, 178, 0); ">{{.Error}}</h3>
         {{end}}
         <h1>{{.User.Username}}</h1>
-        <p>Name: soon...</p>
+        <p>Name: {{.User.Username}}</p>
+        <p style="color: palevioletred;">Role: {{.User.Rol}}</p>
         <p>Email: {{.User.Email}}</p>
-        <p>Bio: soon...</p>
+        <p>Bio: {{.User.Bio}}</p>
         <button id="editButton">Edit Profile</button>
     </div>
 
     <div class="editProfile">
-        <div class="avatar-container "><img class="avatar-img " src="../static/useravatars/ava.jpg" alt="Profile Picture"></div>
+        <div class="avatar-container "><img class="avatar-img " src="../static/useravatars/{{ .ImageURL }}" alt="{{ .ImageURL }}"></div>
         <h1>{{.User.Username}}</h1>
         <form method="POST" action="/profile/?id={{.User.Id}}">
             <label for="username">New name:</label>
@@ -42,9 +43,9 @@
             value="{{.User.Username}}" required>
             <button type="submit" value="profile" >save</button>
         </form>
+        <p style="color: palevioletred;">Role: {{.User.Rol}}</p>
         <p>Email: {{.User.Email}}</p>
-        <p>Bio: soon...</p>
-        
+        <p>Bio: {{.User.Bio}}</p>
         <button id="saveButton">Profile</button>
     </div>
 
