--- a/front/html/homepage.html
+++ b/front/html/homepage.html
@@ -18,7 +18,7 @@
       </nav>
     {{else}}
     <nav>
-      <h1 style="color: rgb(68, 217, 236);">Forum</h1>
+      <a href="/"><h2>Forum</h2><span></span></a>
         <a href="/signin">Sign In<span></span></a>
         <a href="/signup">Sign Up<span></span></a>
         <a href="/about">About<span></span></a>
