--- a/front/html/signin.html
+++ b/front/html/signin.html
@@ -11,16 +11,10 @@
 <body>
     <header>
         <nav>
-          <a href="/">Forum</a>
-          <div class="left">
-            <a href="/signin" style="color: rgb(68, 217, 236);">Sign in</a>
-          </div> 
-          <div class="center">
-            <a href="/signup">Sign up</a>
-          </div>
-          <div class="right">
-            <a href="/about" >About</a>
-          </div>
+          <a href="/"><h2>Forum</h2><span></span></a>
+          <a href="/signin" style="color: rgb(68, 217, 236);">Sign In<span></span></a>
+          <a href="/signup">Sign Up<span></span></a>
+          <a href="/about">About<span></span></a>
         </nav>
       </header>
       
