--- a/front/html/signup.html
+++ b/front/html/signup.html
@@ -12,21 +12,10 @@
 
   <header>
     <nav>
-      <a href="/">Forum</a>
-      <div class="left">
-        <a href="/signin">Sign in</a>
-      </div> 
-      <div class="center">
-        <a href="/signup" style="color: rgb(68, 217, 236);">Sign up</a>
-      </div>
-      <div class="right">
-        <a href="/about" title=" Your password must be 8-20 characters long and consist of at least:
-        1 lower case letter (a), 
-        1 upper case letter (A), 
-        1 number (1), 
-        1 special symbol ($) .
-        ">About</a>
-      </div>
+      <a href="/"><h2>Forum</h2><span></span></a>
+      <a href="/signin" >Sign In<span></span></a>
+      <a href="/signup" style="color: rgb(68, 217, 236);">Sign Up<span></span></a>
+      <a href="/about">About<span></span></a>
     </nav>
   </header>
 
