--- a/front/html/notification.html
+++ b/front/html/notification.html
@@ -35,7 +35,7 @@
       {{range .Notifications}}
         {{if ne .FromUserId .ToUserId  }}
           <div class="notification">
-            <img src="../static/useravatars/ava.jpg" alt="ava.jpg" class="avatar">
+            <img src="../static/useravatars/{{.AvaImage}}" alt="ava.jpg" class="avatar">
             <p class="username">{{.FromUserName}}</p>
             <p class="message">{{.Message}}</p>
             {{if .CommentId}}
@@ -53,7 +53,7 @@
       {{range .Actions}}
         {{if ne .FromUserId  $.User.Id}}
         <div class="notification">
-          <img src="../static/useravatars/ava.jpg" alt="ava.jpg" class="avatar">
+          <img src="../static/useravatars/{{.AvaImage}}" alt="ava.jpg" class="avatar">
           <p class="username">{{.FromUserName}}</p>
           <p class="message">{{.Message}}</p>
           {{if .CommentId}}
