--- a/front/html/homepage.html
+++ b/front/html/homepage.html
@@ -31,11 +31,14 @@
   </a>
 
   {{end}}
- 
+
     <div>
         <p></p>
         <p></p>
-     </div>
+    </div>
+  <div class="gif-container">
+      <img src="../static/jpg/longPress1.gif" alt="Animation">
+  </div>
 
   <section>
     <p style="color: rgb(255, 189, 67);">Under development: To get to your profile, press and hold your username </p>
