need category delete func

--- a/front/html/notification.html
+++ b/front/html/notification.html
@@ -17,7 +17,7 @@
     <nav>
       <a href="/"><h1>{{.User.Username}}</h1><span></span></a>
       <a href="/post/myLikedPost">My Liked Posts<span></span></a>
-      <a href="/notification" style="color: rgb(68, 217, 236);">Status<span></span></a>
+      <a href="/notification" style="color: rgb(68, 217, 236);">Activity<span></span></a>
       <a href="/post/myPost">My Posts<span></span></a>
       <a href="/post/create">Create Post<span></span></a>
       <a href="/logout">Logout<span></span></a>
