--- a/front/html/myPost.html
+++ b/front/html/myPost.html
@@ -17,7 +17,7 @@
     <nav>
         <a href="/"><h1>{{.Username}}</h1><span></span></a>
             <a href="/post/myLikedPost">My Liked Posts<span></span></a>
-            <a href="/notification">Status<span></span></a>
+            <a href="/notification">Activity<span></span></a>
             <a href="/post/myPost" style="color: rgb(68, 217, 236);">My Posts<span></span></a>
             <a href="/post/create">Create Post<span></span></a>
             <a href="/logout">Logout<span></span></a>
